[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/images/enemybullet.png" type="Texture" id=1]
[ext_resource path="res://scripts/ebullet4.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 62.3296, 96.1924 )

[node name="ebullet" type="Area2D"]
scale = Vector2( 0.15, 0.15 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.36743, 1.12247 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -2.24491, -1.14441e-05 )
scale = Vector2( 11.1022, 10.2042 )

[connection signal="area_entered" from="." to="." method="_on_ebullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_ebullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
